# xenstore_watch

./: .gitignore  ChangeLog  Makefile.am  README  configure.in  description-pak  sample_init_script  system.h  texinfo.tex  xenstore-watch  xenstore-watch.c  xenstore_watch.1  xenstore_watch.c  xenstore_watch.lsm.in  xenstore_watch.spec.in  xenstore_watch.texinfo  xmalloc.c
debian/: changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  info  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex  xenstore-watch.default.ex  xenstore-watch.doc-base.EX
